--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
 
   <body>
     <h1>Script Testing Platform</h1>
-    <h2><div id="app"></div></h2>
+    <h2><div id="app855"></div></h2>
+    <hr />
     <pre><div id="response"></div></pre>
     <script src="./Outbound855.mjs" type="module"></script>
+    <hr />
+    <h2><div id="app810"></div></h2>
+    <pre><div id="response"></div></pre>
+
   </body>
 </html>
