Update 5 files - begin 850 programming.

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,11 @@
   <head>
     <title>EDI Sandbox</title>
     <meta charset="UTF-8" />
+    <LINK REL=StyleSheet HREF="./styles.css" TYPE="text/css">
   </head>
-
   <body>
     <h1>Script Testing Platform</h1>
-    <h2><div id="app810"></div></h2>
-    <hr />
-    <pre><div id="response"></div></pre>
-    <script src="./Outbound810.mjs" type="module"></script>
-    <hr />
+    <a href="./invoice.html" class="myButton">Invoice - 810</a>   
+    <a href="./confirm.html" class="myButton">Confirmation - 855</a>
   </body>
 </html>
