--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Script Testing Platform</h1>
     <a href="./invoice.html" class="myButton">Invoice - 810</a>   
-    <a href="./confirm.html" class="myButton">Confirmation - 855</a>
+    <a href="./shipnotice.html" class="myButton">Shipnotice - 856</a>
   </body>
 </html>
