--- a/src/invoice.html
+++ b/src/invoice.html
@@ -7,6 +7,7 @@
 
   <body>
     <h1>Invoice Test</h1>
+    <p><a href="./index.html">HOME</a></p>
     <h2><div id="app810"></div></h2>
     <hr />
     <pre><div id="response"></div></pre>
