Updating the Bloomies 856 with Changes.  This version works, but totals are a total stain.  And where is my second record!

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Script Testing Platform</h1>
-    <script type="module" src="./856Bloomingdales.json"></script>
+    <script type="module" src="./856Bloomies.js"></script>
     <a href="./invoice.html" class="myButton">Invoice - 810</a>   
     <a href="./shipnotice.html" class="myButton">Shipnotice - 856</a>
   </body>
