--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,43 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display JSON Data as Table</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <script src="./main.mjs"></script>
+    <div class="header">
+        <h1>Welcome to my Webpage</h1>
+        <select>
+            <option value="content1">Content 1</option>
+            <option value="content2">Content 2</option>
+            <option value="content3">Content 3</option>
+        </select>
+    </div>
+
+    <div class="row">
+        <div class="sidebar">
+            <ul>
+                <li><a href="#">Navigation 1</a></li>
+                <li><a href="#">Navigation 2</a></li>
+                <li><a href="#">Navigation 3</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <p>This is the main content area.</p>
+        </div>
+    </div>
+
+    <div class="footer"></div>
+<script language="javascript" type="text/javascript">
+var i=new Image();
+i.src='/app/site/hit/tracker.nl?c=4675206_SB1&n=1&type=page&siteroot=Live+Hosting+Files&url=%2Fc.4675206_SB1%2Fsite%2Findex.html&referer='+encodeURIComponent(document.referrer);
+i.onload=function(){nsVoid();};
+function nsVoid(){return;};
+</script>
+
 </body>
 </html>
+<!-- 825 s: 34% #198 cache: 5% #108 -->
+<!-- Host [ sh114.prod.phx.na9.core.ns.internal ] App Version [ 2024.1.13.30533 ] -->
+<!-- COMPID [ 4675206_SB1 ] URL [ /s.nl ] Time [ Thu Apr 18 10:31:49 PDT 2024 ] -->
+<!-- All SQL was faster than 100 ms -->
+
